# dblp-rdf-service

./: .gitignore  .gitmodules  .ignore  dev-notes.md  pyproject.toml  readme.md  run
dblp_rdf_service/dblp_rdf_service/: cli.py  xml_utils.py
dblp_rdf_service/lib/open_exchange/: __init__.py  note_schemas.py  open_fetch.py  profile_schemas.py
dblp_rdf_service/lib/predef/: listops.py  output.py  typedefs.py  zipper.py
dblp_rdf_service/tests/: helpers.py  test_author_tree_transforms.py
dblp_service/: __init__.py  main.py
dblp_service/app/: cli.py  rdf_db.py  rdf_query.py  stash.py
dblp_service/dblp_io/bibtex_output/: bibtex_transform.py
dblp_service/dblp_io/rdf_io/: dblp_repr.py  dblp_repr_alt.py  queries.py  tree_traversal.delete  tree_traversal.py  tree_traversal_alt.py  tree_traverse_handlers.py  trees.py
dblp_service/dblp_io/xml_output/: xml_transform.py
dblp_service/dblp_rdf_service/: author_tree_transforms.py  queries.py
dblp_service/lib/open_exchange/: __init__.py  open_fetch.py  utils.py
dblp_service/lib/predef/: __init__.py  alignment.py  config.py  filesys.py  iterget.py  log.py  tables.py  utils.py  zipper.py
dblp_service/rdf_io/: authorship_trees.py  bibtex_transform.py  dblp_repr.py  queries.py  tree_traversal.py  tree_traverse_handlers.py  trees.py  xml_transform.py
dblp_service/rdfdb/: dblp_rdf_catalog.py  fetch_dblp_files.py  file_stash.py  file_stash_manager.py  fuseki_context.py  load_db.py  manage_db.py  rdf_file_manager.py  update_db.py
dblp_service/tests/: __init__.py  druck-tree.txt  helpers.py  test_author_tree_transforms.py
dblp_service/tests/dblp_io/bibtex_output/: test_bibtex_construction.py  test_bibtex_transform.py
dblp_service/tests/dblp_io/rdf_io/: test_dblp_repr.py  test_tree_traversal.py  test_trees.py  test_tupledata.py
dblp_service/tests/dblp_io/xml_output/: test_xml_transform.py
dblp_service/tests/rdf_io/: test_bibtex_transform.py  test_dblp_repr.py  test_tree_traversal.py  test_trees.py  test_tupledata.py
dblp_service/tests/rdfdb/: dblp_rdf_catalog_test.py  file_stash_manager_test.py  file_stash_test.py  fuseki_context_test.py  mock_data.py  update_db_test.py
docs/: file-stash.md  rdf-db-operations.md  task-notes.md
rdf_service/: author_query.py  author_tree_transforms.py  cli.py  queries.py  trees.py
resources/: dblp-l222.ttl  jena-assembly.ttl
src/dblp_service/: __init__.py  main.py
src/dblp_service/app/: arg_helpers.py  cli.py  graph_query.py  jena.py  openreview.py  rdf_db.py  rdf_query.py  stash.py
src/dblp_service/dblp_io/rdf_io/: authorship_trees.py  dblp_repr.delete  tree_traversal.py  tree_traverse_handlers.py
src/dblp_service/dblp_org/: dblp_rdf_catalog.py  fetch_dblp_files.py
src/dblp_service/lib/: alignment.py  config.py  debug.py  inplace_filewriter.py  log.py  utils.py
src/dblp_service/lib/open_exchange/: open_fetch.py  utils.py
src/dblp_service/lib/predef/: alignment.py  config.py  filesys.py  log.py  zipper.py
src/dblp_service/local_storage/: file_stash_manager.py  fuseki_context.py  graph_naming.py  jena_db.py
src/dblp_service/open_exchange/: note_schemas.py  open_fetch.py  profile_schemas.py  utils.py
src/dblp_service/pub_formats/bibtex/: bibtex_transform.py
src/dblp_service/pub_formats/rdf_tuples/: authorship_trees.py  dblp_repr.py  queries.py  tree_traversal.py  tree_traversal_viewer.py  tree_traverse_handlers.py  trees.py
src/dblp_service/pub_formats/xml/: xml_transform.py
src/dblp_service/rdfdb/: diff_engine.py  file_stash_manager.py  fuseki_context.py  graph_naming.py  jena_db.py  manage_db.py  sparql.py
src/dblp_service/services/: author_alignment.py  author_alignment_types.py  diff_engine.py  patch_openreview.py  rdf_graph_diff.py
src/docs/: architecture.md  author-alignment.md  data-examples.md  dblp-rdf-notes.md  file-stash.md  installation.md  overview.md  rdf-db-operations.md  task-notes.md  usage.md
src/lib/open_exchange/: note_schemas.py  open_fetch.py  profile_schemas.py  utils.py
src/lib/predef/: __init__.py  alignment.py  consts.py  iterget.py  log.py  schemas.py  typedefs.py  utils.py  zipper.py
src/rdf_service/: author_tree_transforms.py  cli.py  trees.py  xml_utils.py
src/resources/: dblp-l338.ttl
src/tests/: helpers.py  test_author_tree_transforms.py
src/tests/dblp_io/rdf_io/: test_tree_traversal.py
src/tests/dblp_service/: openreview_data.py
src/tests/dblp_service/dblp_io/: author_tree_transforms_test.py
src/tests/dblp_service/dblp_io/bibtex_output/: bibtex_transform_test.py  test_bibtex_transform.py
src/tests/dblp_service/dblp_io/rdf_io/: test_tree_traversal.py  tree_traversal_test.py
src/tests/dblp_service/dblp_io/xml_output/: test_xml_transform.py  xml_transform_test.py
src/tests/dblp_service/dblp_org/: dblp_rdf_catalog_test.py
src/tests/dblp_service/lib/: inplace_filewriter_test.py
src/tests/dblp_service/lib/predef/: inplace_filewriter_test.py
src/tests/dblp_service/local_storage/: file_stash_manager_test.py  fixtures.py  fuseki_context_test.py  graph_naming_test.py  jena_db_test.py  mock_data.py
src/tests/dblp_service/pub_formats/: author_tree_transforms_test.py
src/tests/dblp_service/pub_formats/bibtex/: bibtex_transform_test.py
src/tests/dblp_service/pub_formats/rdf_tuples/: tree_traversal_test.py  trees_test.py  tupledata.py
src/tests/dblp_service/pub_formats/xml/: xml_transform_test.py
src/tests/dblp_service/rdfdb/: dblp_rdf_catalog_test.py  diff_engine_test.py  file_stash_manager_test.py  fixtures.py  fuseki_context_test.py  graph_naming_test.py  jena_db_test.py  mock_data.py
src/tests/dblp_service/services/: author_alignment_test.py  diff_engine_test.py  rdf_graph_diff_test.py
src/tests/rdfdb/: file_stash_manager_test.py
tests/: druck-pub-tree.txt  helpers.py  test_author_tree_transforms.py  test_trees.py
