[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dblp-service"
version = "0.1.0"
description = ""
authors = ["Adam C. Saunders <saunders@cs.umass.edu>"]
readme = "readme.md"
packages = [{include = "dblp_service", from = "src"},]


[tool.poetry.dependencies]
python = "^3.12"
sparqlwrapper = "^2.0.0"
click = "^8.1.7"
rich = "^13.6.0"
bigtree = "^0.13.1"
requests-futures = "^1.0.1"
bibtexparser = "^2.0.0b3"
marshmallow = "^3.20.1"
email-validator = "^2.0.0.post2"
tqdm = "^4.66.1"
beautifulsoup4 = "^4.12.2"
marshmallow-dataclass = "^8.6.0"
structlog = "^23.2.0"
vulture = "^2.10"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pyright = "^1.1.331"
pylint = "^3.0.1"
flake8 = "^6.1.0"
mypy = "^1.6.0"
flake8-pyproject = "^1.2.3"
icecream = "^2.1.3"
pytest-asyncio = "^0.21.1"
ruff = "^0.1.5"
types-requests = "^2.31.0.10"
types-tqdm = "^4.66.0.4"
types-beautifulsoup4 = "^4.12.0.7"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
addopts = [
    "--import-mode=importlib",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
builtins = ["ic"]
src = ["src"]
# include = ["src/**"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy]
pretty = false
# strict = true
# The following are all enabled by --strict
warn_unused_configs = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[tool.pyright]
useLibraryCodeForTypes = true
typeCheckingMode = "strict" # strict/none
include = [
    "src/**"
]
exclude = [
    "submodules/**"
]


### https://github.com/microsoft/pyright/blob/main/docs/configuration.md#diagnostic-rule-defaults
reportMissingImports = "error" #[boolean or string, optional]
reportMissingTypeStubs = false #[boolean or string, optional]
reportUnusedImport = "warning" #[boolean or string, optional]
reportUnusedVariable = "information" #[boolean or string, optional]

# reportUntypedNamedTuple = false
# reportGeneralTypeIssues = "error" #[boolean or string, optional]
# reportPropertyTypeMismatch = "warning" #[boolean or string, optional]
# reportUntypedFunctionDecorator = false #[boolean or string, optional]
# reportUnknownParameterType = "warning" #[boolean or string, optional]
# reportUnknownArgumentType = "warning" #[boolean or string, optional]
# reportUnknownLambdaType = "warning" #[boolean or string, optional]
# reportUnknownVariableType = "warning" #[boolean or string, optional]
# reportUnknownMemberType = "none" #[boolean or string, optional]
# reportMissingParameterType = "warning" #[boolean or string, optional]
# reportMissingTypeArgument = "error" #[boolean or string, optional]
# reportMissingModuleSource = "none"
